--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -6,6 +6,16 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      ffcx_branch:
+        description: "FFCx branch or tag"
+        default: "main"
+        type: string
+      ufl_branch:
+        description: "UFL branch or tag"
+        default: "main"
+        type: string
 
 jobs:
   build:
@@ -24,7 +34,7 @@ jobs:
           sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build graphviz libgraphviz-dev pkg-config
 
       - name: Install UFL
-        run: pip install git+https://github.com/FEniCS/ufl.git
+        run: pip install git+https://github.com/FEniCS/ufl.git@${{ github.event.inputs.ufl_branch }}
       - name: Install Basix
         run: pip -v install .[ci]
 
@@ -33,7 +43,7 @@ jobs:
         with:
           path: ./ffcx
           repository: FEniCS/ffcx
-          ref: main
+          ref: ${{ github.event.inputs.ffcx_branch }}
 
       - name: Install FFCx
         run: |
