--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -41,10 +41,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
+      # - name: Set up Python
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: 3.8
 
       # - name: Install Intel compilers
       #   run: |
@@ -56,12 +56,10 @@ jobs:
 
       - name: Install Basix
         run: |
-          . /opt/intel/oneapi/setvars.sh
           export VERBOSE=1
           pip -v install .[test]
 
       - name: Run units tests
         run: |
           pip install pytest-xdist
-          . /opt/intel/oneapi/setvars.sh
           pytest -v -n auto --durations 20 test/
