--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -22,44 +22,16 @@ jobs:
     runs-on: ubuntu-latest
     container: intel/oneapi
 
-    defaults:
-      run:
-        shell: bash
-
-    # strategy:
-    #   matrix:
-    #     include:
-    #       - compiler: "LLVM-based"
-    #         c_compiler: icx
-    #         cxx_compiler: icpx
-
-    # env:
-    #   CC: ${{ matrix.c_compiler }}
-    #   CXX: ${{ matrix.cxx_compiler }}
-    #   DEBIAN_FRONTEND: noninteractive
+    env:
+      CC: icx
+      CXX: icpx
 
     steps:
       - uses: actions/checkout@v2
-
-      # - name: Set up Python
-      #   uses: actions/setup-python@v2
-      #   with:
-      #     python-version: 3.8
-
-      # - name: Install Intel compilers
-      #   run: |
-      #     wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-      #     sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-      #     echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
-      #     sudo apt update
-      #     sudo apt install -y intel-oneapi-common-vars intel-oneapi-compiler-dpcpp-cpp
-
       - name: Install Basix
         run: |
-          export VERBOSE=1
-          export CMAKE_ARGS="-DDOWNLOAD_XTENSOR_LIBS=true"
+          export CMAKE_ARGS="-DDOWNLOAD_XTENSOR_LIBS:BOOL=true"
           pip -v install .[test]
-
       - name: Run units tests
         run: |
           pip install pytest-xdist
