--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -84,10 +84,10 @@ jobs:
           path: dist
 
       - uses: pypa/gh-action-pypi-publish@v1.5.0
-        if: ${{ github.event.inputs.pypi_publish }}
+        if: ${{ github.event.inputs.pypi_publish == 'true' }}
         with:
           user: __token__
-          password: ${{ secrets.PYPI_TOKEN == 'true' }}
+          password: ${{ secrets.PYPI_TOKEN }}
           repository_url: https://upload.pypi.org/legacy/
 
       - uses: pypa/gh-action-pypi-publish@v1.5.0
