--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -31,7 +31,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Intel compilers
         run: |
-          apt-get update && apt-get install wget gnupg git python3-pip cmake
+          # apt-get update && apt-get install wget gnupg git python3-pip cmake
+          apt-get update && apt-get install wget gnupg git python3-pip ninja-build
       - name: Install Intel compilers
         run: |
           wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
@@ -42,6 +43,8 @@ jobs:
 
       - name: Install Basix
         run: |
+          . /opt/intel/oneapi/setvars.sh
+          # . /opt/intel/oneapi/mkl/latest/env/vars.sh
           export CMAKE_ARGS="-DDOWNLOAD_XTENSOR_LIBS:BOOL=true"
           pip -v install .[test]
       - name: Run units tests
