--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -31,14 +31,14 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install required packages to install Intel compilers and to build
         run: |
-          apt-get update && apt-get install -y cmake git gnupg ninja-build python3-pip wget ninja-build
+          apt-get update && apt-get install -y cmake git gnupg ninja-build wget ninja-build
       - name: Install Intel compilers
         run: |
           wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           echo "deb https://apt.repos.intel.com/oneapi all main" | tee /etc/apt/sources.list.d/oneAPI.list
           apt update
-          apt install -y intel-oneapi-common-vars intel-oneapi-compiler-dpcpp-cpp intel-oneapi-mkl
+          apt install -y intel-oneapi-common-vars intel-oneapi-compiler-dpcpp-cpp intel-oneapi-mkl intel-oneapi-python
       - name: Install Basix
         run: |
           . /opt/intel/oneapi/setvars.sh
