--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -1,6 +1,6 @@
 name: FFCx integration
 
-# This workflow will install Basix and FFCx and run the FFCx unit tests.
+# Install Basix and FFCx and run the FFCx unit tests.
 
 on:
   pull_request:
@@ -35,22 +35,12 @@ jobs:
           sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build graphviz libgraphviz-dev pkg-config
 
       - name: Install UFL
-        run: pip install git+https://github.com/FEniCS/ufl.git
-        # run: pip install git+https://github.com/FEniCS/ufl.git@${{ github.event.inputs.ufl_branch }}
+        run: pip install git+https://github.com/FEniCS/ufl.git@${{ github.event.inputs.ufl_branch }}
       - name: Install Basix
         run: pip -v install .[ci]
 
-      - name: Get FFCx
-        uses: actions/checkout@v2
-        with:
-          path: ./ffcx
-          repository: FEniCS/ffcx
-          ref: ${{ github.event.inputs.ffcx_branch }}
-
       - name: Install FFCx
-        run: |
-          cd ffcx
-          pip install .[ci]
+        run: pip install "fenics-ffcx[ci] @ git+https://github.com/FEniCS/ffcx.git@${{ github.event.inputs.ffcx_branch }}"
 
       - name: Build FFCx unit tests
         run: |
