--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           path: ./ffcx
           repository: FEniCS/ffcx
-
+          ref: main
       - name: Get FFCx source (to access tests, specific branch)
         if: ${{ github.event == 'workflow_dispatch' }}
         uses: actions/checkout@v2
@@ -65,6 +65,8 @@ jobs:
           repository: FEniCS/ffcx
           ref: ${{ github.event.inputs.ffcx_branch }}
 
-      - name: Build FFCx unit tests
+      - name: Install FFCx
+        run: pip install .ffcx/[ci]
+      - name: Run FFCx tests
         run: |
           python -m pytest -n auto ffcx/test
