--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -66,7 +66,7 @@ jobs:
           ref: ${{ github.event.inputs.ffcx_branch }}
 
       - name: Install FFCx
-        run: pip install .ffcx/[ci]
+        run: pip install ./ffcx[ci]
       - name: Run FFCx tests
         run: |
           python -m pytest -n auto ffcx/test
