--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -33,23 +33,23 @@ jobs:
         run: sudo apt-get install -y libopenblas-dev liblapack-dev graphviz libgraphviz-dev ninja-build
 
       - name: Install UFL (default branch)
-        if: "${{ github.event != 'workflow_dispatch' }}"
+        if: "${{ github.event_name != 'workflow_dispatch' }}"
         run: pip install git+https://github.com/FEniCS/ufl.git
       - name: Install UFL (specified branch)
-        if: "${{ github.event == 'workflow_dispatch' }}"
+        if: "${{ github.event_name == 'workflow_dispatch' }}"
         run: pip install git+https://github.com/FEniCS/ufl.git@${{ github.event.inputs.ufl_branch }}
 
       - name: Install Basix
         run: pip -v install .[ci]
 
       - name: Get FFCx source (default branch)
-        if: ${{ github.event != 'workflow_dispatch' }}
+        if: ${{ github.event_name != 'workflow_dispatch' }}
         uses: actions/checkout@v2
         with:
           path: ./ffcx
           repository: FEniCS/ffcx
       - name: Get FFCx source (specified branch)
-        if: ${{ github.event == 'workflow_dispatch' }}
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: actions/checkout@v2
         with:
           path: ./ffcx
