--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -33,10 +33,10 @@ jobs:
         run: sudo apt-get install -y libopenblas-dev liblapack-dev graphviz libgraphviz-dev ninja-build
 
       - name: Install UFL (default branch)
-        if: "${{ !github.event.workflow_dispatch }}"
+        if: ${{ !github.event.workflow_dispatch }}
         run: pip install git+https://github.com/FEniCS/ufl.git
       - name: Install UFL (specified branch)
-        if: "${{ github.event.workflow_dispatch }}"
+        if: ${{ github.event.workflow_dispatch }}
         run: pip install git+https://github.com/FEniCS/ufl.git@${{ github.event.inputs.ufl_branch }}
 
       - name: Install Basix
