--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -12,7 +12,6 @@ on:
         description: "FFCx branch or tag"
         default: "main"
         type: string
-
       ufl_branch:
         description: "UFL branch or tag"
         default: "main"
@@ -31,17 +30,33 @@ jobs:
           python-version: 3.9
 
       - name: Install dependencies
-        run: |
-          sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build graphviz libgraphviz-dev pkg-config
+        run: sudo apt-get install -y libopenblas-dev liblapack-dev graphviz libgraphviz-dev ninja-build
 
-      - name: Install UFL
+      - name: Install UFL (default branch)
+        if: github.event_name != 'workflow_dispatch'
+        run: pip install git+https://github.com/FEniCS/ufl.git
+      - name: Install UFL (specified branch)
+        if: github.event_name == 'workflow_dispatch'
         run: pip install git+https://github.com/FEniCS/ufl.git@${{ github.event.inputs.ufl_branch }}
+
       - name: Install Basix
-        run: pip -v install .[ci]
+        run: pip -v install .
+
+      - name: Get FFCx source (default branch)
+        if: github.event_name != 'workflow_dispatch'
+        uses: actions/checkout@v2
+        with:
+          path: ./ffcx
+          repository: FEniCS/ffcx
+      - name: Get FFCx source (specified branch)
+        if: github.event_name == 'workflow_dispatch'
+        uses: actions/checkout@v2
+        with:
+          path: ./ffcx
+          repository: FEniCS/ffcx
+          ref: ${{ github.event.inputs.ffcx_branch }}
 
       - name: Install FFCx
-        run: pip install "fenics-ffcx[ci] @ git+https://github.com/FEniCS/ffcx.git@${{ github.event.inputs.ffcx_branch }}"
-
-      - name: Build FFCx unit tests
-        run: |
-          python -m pytest -n auto ffcx/test
+        run: pip install ./ffcx[ci]
+      - name: Run FFCx tests
+        run: python -m pytest -n auto ffcx/test
