--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -1,6 +1,6 @@
 name: Intel compilers
 
-# This workflow will test Basix built using Intel compilers
+# This workflow will test Basix built using Intel compilers and MKL
 
 on:
   schedule:
@@ -8,53 +8,42 @@ on:
     - cron: "0 2 * * TUE"
   pull_request:
     branches:
-      - main  
+      - main
   workflow_dispatch: ~
 
 jobs:
   build:
     name: Build and test
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        shell: bash
-
-    strategy:
-      matrix:
-        include:
-          - compiler: "LLVM-based"
-            c_compiler: icx
-            cxx_compiler: icpx
+    container: ubuntu:latest  # Run in container to test with minimal pre-installed packages
 
     env:
-      CC: ${{ matrix.c_compiler }}
-      CXX: ${{ matrix.cxx_compiler }}
+      CC: icx
+      CXX: icpx
       DEBIAN_FRONTEND: noninteractive
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-
+      - name: Install required packages to install Intel compilers and to build
+        run: |
+          apt-get update && apt-get install -y cmake git gnupg ninja-build python3-pip wget
       - name: Install Intel compilers
         run: |
           wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-          sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-          echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
-          sudo apt update
-          sudo apt install -y intel-oneapi-common-vars intel-oneapi-compiler-dpcpp-cpp
-
+          apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+          echo "deb https://apt.repos.intel.com/oneapi all main" | tee /etc/apt/sources.list.d/oneAPI.list
+          apt update
+          apt install -y intel-oneapi-common-vars intel-oneapi-compiler-dpcpp-cpp intel-oneapi-mkl
       - name: Install Basix
         run: |
           . /opt/intel/oneapi/setvars.sh
-          pip install .[test]
-
+          export CMAKE_ARGS="-DDOWNLOAD_XTENSOR_LIBS:BOOL=true"
+          pip -v install .[test]
       - name: Run units tests
+        # LD_PRELOAD is required to 'fix' library resolution problems
+        # when Numpy is not built against MKL
         run: |
-          pip install pytest-xdist
           . /opt/intel/oneapi/setvars.sh
-          pytest -v -n auto --durations 20 test/
+          pip install pytest-xdist
+          export LD_PRELOAD=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_core.so:/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_sequential.so
+          pytest -vs -n auto --durations 20 test/
