--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -25,11 +25,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: dnf install -y gcc-toolset-11-toolchain python39-pip
+        run: dnf install -y gcc-toolset-11-toolchain python39 python39-pip ninja-build
 
       - name: Install Basix
         run: |
           scl enable gcc-toolset-11 bash
+          echo ${CXX}
+          echo which g++
           python3 -m pip install .[test]
 
       - name: Run units tests
