--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -29,7 +29,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: dnf install -y gcc-toolset-11-toolchain python39 python39-pip which
+        run: |
+          dnf install -y gcc-toolset-11-toolchain python39 python39-pip which
+          scl enable gcc-toolset-11 bash
+          which g++
 
       - name: Install Basix
         run: |
