--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           sed -i 's/enabled=0/enabled=1/' /etc/yum.repos.d/Rocky-PowerTools.repo
-          dnf install -y gcc-toolset-11-toolchain git blas-devel python39 python39-pip
+          dnf install -y gcc-toolset-11-toolchain git blas-devel lapack-devel python39 python39-pip
 
       - name: Install Basix
         run: |
