--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
     name: Build and test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container: ubuntu:latest  # Run in container to test with minimal pre-installed packages
 
     env:
