Revert "use ubuntu 20.04"
This reverts commit 821ef48dcfe6d97635636861012ef1ccd4e01475.

--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   build:
     name: Run DOLFINx tests
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     container: fenicsproject/test-env:latest-openmpi
 
     env:
