--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -22,6 +22,7 @@ jobs:
       CXX: g++
 
     steps:
+      - run: sudo apt-get install xz-utils
       - uses: actions/checkout@v3
 
       - name: Install dependencies
