Revert "no apt on redhat"
This reverts commit 2964c4be08d16aba1199f005fb87ab9c74c47844.

--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -22,6 +22,7 @@ jobs:
       CXX: g++
 
     steps:
+      - run: apt-get install -y xz-utils
       - uses: actions/checkout@v3
 
       - name: Install dependencies
