--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
     name: Build and test (Red Hat)
-    # runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     container: rockylinux/rockylinux:8
 
     env:
@@ -22,7 +22,6 @@ jobs:
       CXX: g++
 
     steps:
-      - run: apt-get install -y xz-utils
       - uses: actions/checkout@v3
 
       - name: Install dependencies
