--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -133,7 +133,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.10']
 
     steps:
       - uses: actions/checkout@v3
@@ -145,7 +145,7 @@ jobs:
         run: sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
 
       - name: Install CI dependencies
-        run: pip install pytest sympy numba scipy matplotlib fenics-ufl
+        run: pip install pytest sympy numba scipy matplotlib fenics-ufl pytest-xdist
 
       - name: Install Basix
         run: |
