--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -3,12 +3,12 @@ name: Red Hat clone
 # This workflow will test Basix on Red Hat
 
 on:
-  schedule:
-    # '*' is a special character in YAML, so string must be quoted
-    - cron: "0 2 * * TUE"
-  pull_request:
-    branches:
-      - main
+  # schedule:
+  #   # '*' is a special character in YAML, so string must be quoted
+  #   - cron: "0 2 * * TUE"
+  # pull_request:
+  #   branches:
+  #     - main
   workflow_dispatch: ~
 
 jobs:
