--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Run units tests
         run: |
           python3 -m pip install pytest-xdist
-          python3 -m pytest -v -n auto --durations 20 test/
+          python3 -m pytest -n auto --durations 20 test/
