--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -145,7 +145,7 @@ jobs:
         run: sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
 
       - name: Install CI dependencies
-        run: pip install pytest sympy numba scipy matplotlib fenics-ufl pytest-xdist
+        run: pip install pytest sympy numba scipy matplotlib fenics-ufl pytest-xdist pybind11
 
       - name: Install Basix
         run: |
