--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -151,7 +151,7 @@ jobs:
         run: |
           cmake -DCMAKE_BUILD_TYPE=Release -DDOWNLOAD_XTENSOR_LIBS=ON -B build-dir -S .
           cmake --build build-dir
-          cmake --install build-dir
+          sudo cmake --install build-dir
           cd python && pip install .
 
       - name: Run units tests
