--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -126,3 +126,38 @@ jobs:
           git add --all
           git commit --allow-empty -m "Update Basix docs FEniCS/basix@${{ github.sha }}"
           git push
+
+  build-cmake:
+    name: Build using cmake and test
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        python-version: ['3.10']
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
+
+      - name: Install CI dependencies
+        run: pip install pytest sympy numba scipy matplotlib fenics-ufl pytest-xdist pybind11
+
+      - name: Install Basix
+        run: |
+          cmake -DCMAKE_BUILD_TYPE=Release -DDOWNLOAD_XTENSOR_LIBS=ON -B build-dir -S .
+          cmake --build build-dir
+          sudo cmake --install build-dir
+          cd python && pip install .
+
+      - name: Run units tests
+        run: |
+          pytest -n auto --durations 20 test/
+
+      - name: Run python demos
+        run: |
+          pytest demo/python/test.py
