--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -55,6 +55,7 @@ jobs:
 
       - name: Run units tests
         run: |
+          pytest -s -v test/test_timing.py
           pytest -n auto --durations 20 test/
 
       - name: Run python demos
