--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -10,7 +10,7 @@ on:
     inputs:
       ffcx_branch:
         description: "FFCx branch or tag"
-        default: "main"
+        default: "mscroggs/hermite"
         type: string
       ufl_branch:
         description: "UFL branch or tag"
@@ -48,6 +48,7 @@ jobs:
         with:
           path: ./ffcx
           repository: FEniCS/ffcx
+          ref: mscroggs/hermite
       - name: Get FFCx source (specified branch)
         if: github.event_name == 'workflow_dispatch'
         uses: actions/checkout@v3
