--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -45,7 +45,7 @@ find_package(nanobind REQUIRED CONFIG HINTS ${PYBIND11_DIR} ${PYBIND11_ROOT}
 # Create the binding library
 # pybind11_add_module(_basixcpp MODULE wrapper.cpp)
 nanobind_add_module(_basixcpp MODULE wrapper.cpp)
-target_link_libraries(_basixcpp PRIVATE Basix::basix)
+target_link_libraries(_basixcpp PRIVATE Basix::basix nanobind)
 
 # Add strict compiler flags
 include(CheckCXXCompilerFlag)
@@ -71,4 +71,5 @@ if (SKBUILD)
   endif()
 
   install(TARGETS _basixcpp DESTINATION .)
+  install(TARGETS nanobind DESTINATION lib)
 endif()
