--- a/python/docs.h.template
+++ b/python/docs.h.template
@@ -228,21 +228,22 @@ Returns:
 )";
 
 {{DOCTYPE}} create_custom_element = R"(
-{{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > doc}}
+{{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > doc}}
 
 Args:
-    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > param > cell_type : basix.CellType}}
-    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > param > value_shape : List[int]}}
-    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > param > wcoeffs : numpy.ndarray[numpy.float64]}}
-    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > param > x : List[List[numpy.ndarray[numpy.float64]]]}}
-    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > param > M : List[List[numpy.ndarray[numpy.float64]]]}}
-    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > param > map_type : basix.MapType}}
-    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > param > discontinuous : bool}}
-    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > param > highest_complete_degree : int}}
-    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > param > highest_degree : int}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > param > cell_type : basix.CellType}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > param > value_shape : List[int]}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > param > wcoeffs : numpy.ndarray[numpy.float64]}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > param > x : List[List[numpy.ndarray[numpy.float64]]]}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > param > M : List[List[numpy.ndarray[numpy.float64]]]}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > param > interpolation_nderivs : int}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > param > map_type : basix.MapType}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > param > discontinuous : bool}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > param > highest_complete_degree : int}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > param > highest_degree : int}}
 
 Returns:
-    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_complete_degree, highest_degree) > return : basix.finite_element.FiniteElement}}
+    {{finite-element.h > create_custom_element(cell_type, value_shape, wcoeffs, x, M, interpolation_nderivs, map_type, discontinuous, highest_complete_degree, highest_degree) > return : basix.finite_element.FiniteElement}}
 )";
 
 {{DOCTYPE}} create_element__family_cell_degree_discontinuous = R"(
