--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -34,9 +34,7 @@ jobs:
         run: sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
 
       - name: Install Basix
-        run: |
-          pip install git+https://git@github.com/wjakob/nanobind
-          pip -v install .[ci]
+        run: pip -v install .[ci]
 
       - name: Lint with flake8
         run: |
