--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -72,7 +72,17 @@ feature_summary(WHAT ALL)
 
 add_library(basix)
 
+find_package(Python3 COMPONENTS Interpreter)
+if(Python3_FOUND)
+  execute_process(
+    COMMAND "${Python3_EXECUTABLE}" ${CMAKE_CURRENT_SOURCE_DIR}/generate_docs.py
+    OUTPUT_VARIABLE _DOCS
+  )
+endif()
+
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/basix/version.h.in basix/version.h)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/basix/pybind-docs.h.in basix/pybind-docs.h)
+
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 set(HEADERS_basix
@@ -101,6 +111,7 @@ set(HEADERS_basix
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-bubble.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-serendipity.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-hermite.h
+  ${CMAKE_CURRENT_BINARY_DIR}/basix/pybind-docs.h
   ${CMAKE_CURRENT_BINARY_DIR}/basix/version.h)
 
 target_sources(basix PRIVATE
