--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -166,24 +166,28 @@ jobs:
         run: |
           pytest demo/python/test.py
 
-#  build-cpp-only:
-#    name: Build cpp library only and run demos
-#    runs-on: ${{ matrix.os }}
-#    strategy:
-#      matrix:
-#        os: [ubuntu-latest]
+  build-cpp-only:
+    name: Build cpp library only and run demos
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
 
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Install dependencies
-#        run: sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build
 
-#      - name: Install Basix
-#        run: |
-#          cmake -DCMAKE_BUILD_TYPE=Release -DDOWNLOAD_XTENSOR_LIBS=ON -B build-dir -S .
-#          cmake --build build-dir
-#          sudo cmake --install build-dir
+      - name: Install Basix
+        run: |
+          cmake -DCMAKE_BUILD_TYPE=Release -DDOWNLOAD_XTENSOR_LIBS=ON -B build-dir -S .
+          cmake --build build-dir
+          sudo cmake --install build-dir
 
-#      - name: Run python demos
-#        run: |
-#          pytest demo/python/test.py
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Run python demos
+        run: |
+          pytest demo/cpp/test.py
