--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -167,7 +167,7 @@ jobs:
           pytest demo/python/test.py
 
   build-cpp-only:
-    name: Build cpp library only and run demos
+    name: Build C++ only and run demos
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -188,6 +188,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - name: Run python demos
+      - name: Run C++ demos
         run: |
+          pip install pytest
           pytest demo/cpp/test.py
